# VIZ

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  demo_flexible.py  emotional_market_viz.py  market_viz_complete.py  pyproject.toml  stock_pixel_ascii.py  universal_viz_system.py  viz-ascii-art.skill  viz.py  viz_version.py
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: release.yml  test.yml
archive/: market_viz_complete.py  poc_playcore.py  stock_pixel_ascii.py  universal_viz_system.py
docs/: ai-integration.md  box_chars.md  composition.md  effects.md  flexible.md  kaomoji.md  rendering.md  usage.md
lib/: ascii_convert.py  ascii_texture.py  box_chars.py  content.py  effects.py  fonts.py  glow.py  kaomoji.py  kaomoji_data.py  vocabulary.py
lib/assets/: __init__.py
procedural/: AGENTS.md  __init__.py  bg_fill.py  compositor.py  engine.py  layers.py  layouts.py  masks.py  palette.py  params.py  postfx.py  renderer.py  style_presets.py  transforms.py  types.py
procedural/core/: __init__.py  mathx.py  noise.py  projection.py  sdf.py  vec.py
procedural/effects/: __init__.py  base.py  (+17 more)
skills/: viz-ascii-art.skill
tests/: __init__.py  conftest.py  test_animation.py  test_box_chars.py  test_cli.py  test_content.py  test_director_mode.py  test_effects.py  test_emotion.py  test_engine.py  test_grammar_diversity.py  test_kaomoji.py  test_mathx.py  test_mp4.py  test_noise.py  test_palette.py  test_params.py  test_postfx.py  test_procedural_palette.py  test_projection.py  test_sdf.py  test_transforms.py  test_vec.py  test_vocabulary.py
(+18 files in other folders)
