[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aaajiao-viz"
version = "0.7.0"
description = "ASCII art visualization toolkit for PNG, GIF, and MP4 output."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["ascii", "art", "visualization", "cli", "pillow", "kaomoji"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Artistic Software",
  "Topic :: Multimedia :: Graphics",
]
dependencies = [
  "Pillow>=9.0.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=7.0",
]

[project.scripts]
viz = "viz:main"

[project.urls]
Homepage = "https://github.com/aaajiao/VIZ"
Repository = "https://github.com/aaajiao/VIZ"
Issues = "https://github.com/aaajiao/VIZ/issues"
Releases = "https://github.com/aaajiao/VIZ/releases"
Changelog = "https://github.com/aaajiao/VIZ/blob/main/CHANGELOG.md"

[tool.setuptools]
py-modules = ["viz", "viz_version"]
packages = ["lib", "lib.assets", "procedural", "procedural.core", "procedural.effects", "procedural.flexible"]
include-package-data = true

[tool.setuptools.package-data]
lib = ["assets/*.otf"]
